Fix styling issues for contact page on mobile view

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -482,7 +482,6 @@ footer a{
         gap: 0px;
         display: flex;
         flex-direction: column;
- 
      }
     
      .contact .details{
@@ -491,16 +490,16 @@ footer a{
         align-items: center;
         text-align: center;
         gap: 20px;
+        margin: 30px 10px;
+
     }
 
 
-
-
     .contact .form{
-        width: 90%;
+        width: 100%;
         grid-template-columns: 1fr;
-        margin: 20px;
-    
+        margin: 0;
+        padding: 20px 0px;
       }
     
       .contact .form input[name="message"]{
@@ -509,7 +508,6 @@ footer a{
       
       .contact .form input[type="submit"]{
         grid-column: span 1;
-      
       }
 
       
